# named_entity_recognition_microservice

./: .gitignore  README.md  compose.yml  dockerfile  mkdocs.yml  pyproject.toml  remove_comments.py
docs/: escolhas_tecnicas.md  index.md
docs/projetos/: analise_dados_pokeapi.md  micro_servico_model_serving.md
docs/projetos/analise_dado_pokeapi/: analise_dados_pokeapi.md  arquitetura.md  desenvolvimento.md
docs/projetos/analise_dados_pokeapi/: arquitetura.md  como_executar.md  debitos_tecnicos.md
docs/projetos/analise_dados_pokeapi/doc_strings/: main.md
docs/projetos/analise_dados_pokeapi/doc_strings/api/: api_handler.md  client.md
docs/projetos/analise_dados_pokeapi/doc_strings/database/: database.md  models.md  schemas.md
docs/projetos/analise_dados_pokeapi/doc_strings/storage/: storage.md
docs/projetos/analise_dados_pokeapi/doc_strings/utils/: logger.md  settings.md
docs/projetos/nre_service/: api_reference.md  arquitetura.md  como_executar.md  debitos_tecnicos.md  desenvolvimento.md  micro_servico_model_serving.md
docs/projetos/nre_service/doc_strings/: lifespan.md  main.md  middleware.md
docs/projetos/nre_service/doc_strings/database/: database.md  models.md  schemas.md
docs/projetos/nre_service/doc_strings/routers/: health.md  model.md  predict.md
docs/projetos/nre_service/doc_strings/services/: model_downloader.md  model_registry.md  spacy_service.md
docs/projetos/nre_service/doc_strings/utils/: error_handler.md  logger.md  settings.md
docs/stylesheets/: extra.css
docs/templates/: intro_debitos_tecnicos.md
microservice_nre/: main.py
microservice_nre/database/: database.py  schemas.py
microservice_nre/routers/: health.py  model.py  predict.py
microservice_nre/services/: model_downloader.py  model_registry.py
microservice_nre/utils/: error_handler.py  settings.py
migrations/: env.py
migrations/versions/: 814e42acd227_create_db.py
parte_2/: compose.yml  database.db  dockerfile  pyproject.toml  requirements.txt
parte_2/app/: main.py
parte_2/microservice_nre/: lifespan.py  main.py  middleware.py
parte_2/microservice_nre/database/: database.py  models.py  schemas.py
parte_2/microservice_nre/routers/: health.py  model.py  predict.py
parte_2/microservice_nre/services/: model_downloader.py  model_registry.py  spacy_service.py
parte_2/microservice_nre/utils/: error_handler.py  logger.py  ml_utils.py  settings.py
parte_2/migrations/: env.py
parte_2/migrations/versions/: 659f15f136d8_create_tables.py  814e42acd227_create_db.py
parte_2/tests/: conftest.py  test_main.py  test_middleware.py  test_model_downloader.py  test_model_router.py  test_predict_router.py  test_spacy_service.py
tests/: conftest.py  test_db.py  test_health_router.py  test_model_registry.py  test_spacy_service.py
