[project]
name = "microservice_nre"
version = "0.1.0"
description = ""
authors = [{ name = "rafael-asafe", email = "asafe.ferr@gmail.com" }]
requires-python = ">=3.13,<3.15"
dependencies = [
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.5,<0.16.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-env (>=1.5.0,<2.0.0)",
]
doc = ["mkdocs-material (>=9.7.4,<10.0.0)", "mkdocstrings (>=1.0.3,<2.0.0)", "mkdocstrings-python (>=2.0.3,<3.0.0)"]

[tool.ruff]
include = ["app/**/*.py"]
line-length = 100

[tool.ruff.format]
quote-style = 'single'


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "ANN","I"]
isort.known-first-party = ["database","utils","microservice_nre"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"{tests,docs,tools}/*" = ["E402","ANN"]


[tool.pytest_env]
LOG_LEVEL = "DEBUG"
CONSOLE_LOG = "false"
DATABASE_URL = "sqlite+aiosqlite:///:memory:"
MAX_MODELS_IN_MEMORY = "5"
MODEL_PRELOAD = "[]"
MAX_TEXT_LENGTH = "10000"
HEALTH_CHECK_INTERVAL = "60"
METRICS_RETENTION_DAYS = "30"


[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.taskipy.tasks]
lint = 'ruff check'
test = 'pytest'
run = 'fastapi dev microservice_nre/main.py'